--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -1,14 +1,27 @@
-<% if @adminusers.blank? %>
-No Results found!!
-<%else%>
+
   <%= form_tag search_path,:method=> :get do %>
-  <%= text_field_tag :q, nil %>
-  <%= submit_tag "Search"%> 
+  <%= text_field_tag :q, params[:q] %>
+
+  <%= select_tag(:created, options_for_select(['All', 'Monthly', 'Weekly', 'Daily'], :selected=>params[:created])) %>
+
+  						
+  <%= submit_tag "Search", :class => "btn btn-primary contact-form"  %> 
   <%end%>
+
+  	<% unless @adminusers.blank? %>
+	  	<div  style="text-align:right;margin-left:10px;">
+	          <a href="<%= search_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
+	          <a href="<%= search_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+	   </div>
+  	
+ 	<%end%>
+   
 
   <table class="table table-bordered">
 
+  
 	 <tr>
+	 <th>Name </th>
 	 <th>Email </th>
 	 <th>View Details</th>
 	 <th>Delete</th>
@@ -16,12 +29,15 @@ No Results found!!
 	 </tr>
 	<% @adminusers.each do |adminuser|%>
 	<tr>
-	 <td><%= adminuser.email %>
+	 <td><%= adminuser.name %> <%= adminuser.last_name %></td>
+	 <td><%= adminuser.email %></td>
 	 <td><%= link_to "View Details",{:controller => 'users', :action => 'show', :id => adminuser.id}%></td>
 	 <td><%= link_to "Destroy",{:controller => 'users', :action => 'destroy', :id => adminuser.id}%></td>
 	 <td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
 	 </tr>
+
 	<%end%>	
 
 	</table>
- <%end%>
+
+
