--- a/app/views/home/all_postings.html.erb
+++ b/app/views/home/all_postings.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Sr No.</th>
       <th>Post ID</th>
-       <th>Name</th>
+       <th>Posted By</th>
        <th>Price</th>
       <th>Post Date</th>
       <th>Area (Sq ft)</th>
