--- a/app/views/home/customer_weekly_report.html.erb
+++ b/app/views/home/customer_weekly_report.html.erb
@@ -13,7 +13,7 @@
                             </option>
                      
                           </select>
-  <%= submit_tag "Search"%> 
+  <%= submit_tag "Search", :class => "btn btn-primary contact-form"%> 
   <%end%>
                   <div  style="text-align:right;margin-left:10px;">
           <a href="<%=  home_customer_weekly_report_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
