Email validation - Manage user Admin

--- a/app/views/users/new_user.html.erb
+++ b/app/views/users/new_user.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 <div class="row">
 <div class="span12">
-<h2>Manage user</h2>
+<h2>Create user</h2>
 <fieldset>
 <div>
 <div class="col-md-6">
