--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,11 @@
-<h1>Listing pages</h1>
+<h4>Listing Pages</h4>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th>Meta title</th>
-      <th>Meta description</th>
-      <th colspan="3"></th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
@@ -15,9 +13,7 @@
     <% @pages.each do |page| %>
       <tr>
         <td><%= page.title %></td>
-        <td><%= page.body %></td>
-        <td><%= page.meta_title %></td>
-        <td><%= page.meta_description %></td>
+        <td><%=h truncate(page.body, :length => 40).html_safe %></td>
         <td><%= link_to 'Show', page %></td>
         <td><%= link_to 'Edit', edit_page_path(page) %></td>
         <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
