--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
 <td><%= adminuser.email %></td>
 <td><%= link_to "View Details",{:controller => 'users', :action => 'show', :id => adminuser.id}%></td>
 
-<td><%= link_to "Destroy", [:delete, adminuser], method: :delete %></td>
+<td><%= link_to "Delete", [:delete, adminuser], method: :delete %></td>
 <td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
 </tr>
 <%end%> 
