--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
   <div>
   <%= link_to "Add new User",new_user_users_path%> 
   </div> <br>   
-  <table class="table table-bordered">
+  <table class="table table-striped">
 
 	 <tr>
    <th>First Name </th>
