--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -16,8 +16,9 @@
   	
  	<%end%>
    
+    <%= link_to "Add new User",new_user_users_path%> 
 
-  <table class="table table-bordered">
+  <table class="table table-striped">
 
   
 	 <tr>
@@ -34,7 +35,7 @@
 	 <td><%= adminuser.last_name %></td>
 	 <td><%= adminuser.email %></td>
 	 <td><%= link_to "View Details",{:controller => 'users', :action => 'show', :id => adminuser.id}%></td>
-	 <td><%= link_to "Destroy",{:controller => 'users', :action => 'destroy', :id => adminuser.id}%></td>
+	 <td><%= link_to "Destroy",{:controller => 'users', :action => 'destroy', :id => adminuser.id}, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 	 <td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
 	 </tr>
 
