--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -19,7 +19,9 @@
  	<%end%>
 
    
-    <%= link_to "Add new User",new_user_users_path%> 
+    <div>
+		<%= link_to "Add new User",new_user_users_path%> 
+	</div> </br>
 
 
   <table class="table table-striped">
