--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -38,8 +38,8 @@
 
 <script>
   
-  var refreshId = setInterval(function()
-  {
-       $('#responsecontainer').fadeOut("slow").load('<%= refresh_part_messages_path%>').fadeIn("slow");
-  }, 10000);
+  //var refreshId = setInterval(function()
+  //{
+       //$('#responsecontainer').fadeOut("slow").load('<%= refresh_part_messages_path%>').fadeIn("slow");
+  //}, 10000);
 </script>
