--- a/app/views/posts/all_posts.html.erb
+++ b/app/views/posts/all_posts.html.erb
@@ -1,9 +1,41 @@
-<%= stylesheet_link_tag "facebox.css" %>
-<%= javascript_include_tag "facebox.js", "endless_page.js" %>
+
+<%= stylesheet_link_tag "facebox.css", "perfect-scrollbar.css" %>
+<%= javascript_include_tag "facebox.js", "endless_page.js", "perfect-scrollbar.js" %>
+
         
+    <style>
+      #postermapView { height: 350px; margin: 0px; padding: 0px }
+
+      .left{ width:480px; height:600px; margin:auto; float:left; }
+
+      .right{ width:450px; height:600px; margin:auto; float:left; }
+      .head {height: 185px; width: 600px; }
+      .box1 { border: 1px solid #000000; height: 62px; margin: 8px auto; width: 440px;}
+
+      .description {
+        border: 1px solid gray;
+        height:310px;
+        width: 455px;
+        overflow: hidden;
+        position: absolute;
+      }
+    </style>
+    <script type="text/javascript">
+      $(document).ready(function ($) {
+        $('.description').perfectScrollbar();
+      });
+    </script>
+
+   
 
 
-          <%= form_for :search, :url=>{:controller=>'posts', :action=>'all_posts'},:html => {:method => "post"} do |f| %>
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+      <div class="left"> <div id="postermapView"></div></div>
+
+  <div class="right">
+          <div class="head">
+                <%= form_for :search, :url=>{:controller=>'posts', :action=>'all_posts'},:html => {:method => "post"} do |f| %>
                   <div class="field">
                     Price
                   &nbsp; &nbsp; &nbsp;&nbsp;<%= f.text_field :price, :value=> "#{params[:search][:price] if request.post?}" %>
@@ -26,138 +58,161 @@
                  
                   </div>
 
-             <div class="actions"><%= f.submit "Search" ,:class => "btn btn-secondary" %></div>
+                  <div class="actions"><%= f.submit "Search" ,:class => "btn btn-secondary" %></div>
                  
               <%end%>
+          </div>
+
+           
+          
+                 <div id="all_posts" class="description">
+                    <%= render(:partial => 'posts/all_post') %>
+                    <%= will_paginate @posts %>
+                 </div>   
+               
+
+            
 
 
-<h4> Posts</h4>
-
-  
-  
-<table class="table table-striped">
-
-  <thead>
-    <tr>
-      <th>Sr No.</th>
-      <th>UserName</th>
-      <th>Post ID</th>
-       <th>Price</th>
-      <th>Post Date</th>
-      
-      <th>Area (Sq ft)</th>
-      <th>Price (Sq ft)</th>
-      <th>Address</th>
-      <th>Status</th>
-      <th>Action</th>
-    
-      <th>Send Message</th>
-       
-    </tr>
-  </thead>
-
-  <tbody id="all_posts" >
-
-    <%= render(:partial => 'posts/all_post') %>
-    
-  </tbody>
-</table>
-
-<%= will_paginate @posts %>
+  </div>
 
 
 
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+         
+
+
+
 
 <script type="text/javascript">
-//     // Define your locations: HTML content for the info window, latitude, longitude
-//     var locations = [
+    // Define your locations: HTML content for the info window, latitude, longitude
+    var locations = [
       
    
-//       <% @posts.each do |post| %>
-//         <% post_map = Post.where("latitude != (?) and longitude != (?) and id = (?)", 0.0, 0.0, post.id) %>
-//         <% if post_map[0].present? %>
+      <% @posts.each do |post| %>
+        <% post_map = Post.where("latitude != (?) and longitude != (?) and id = (?)", 0.0, 0.0, post.id) %>
+        <% if post_map[0].present? %>
 
-//         ['<h4 style=\"color:#000000 !important; font-size: 12px;\"><% post_map[0].area rescue nil %></h4>', <%= post_map[0].latitude rescue nil %>, <%= post_map[0].longitude rescue nil %>],
-//         <% end %>
-//       <% end %>
-//     ];
-    
-//     // Setup the different icons and shadows
-//     var iconURLPrefix = 'http://maps.google.com/mapfiles/ms/icons/';
-    
-//     var icons = [
-//       iconURLPrefix + 'red-dot.png'
-//     ]
-//     var icons_length = icons.length;
-    
-    
-//     var shadow = {
-//       anchor: new google.maps.Point(15,33),
-//       url: iconURLPrefix + 'msmarker.shadow.png'
-//     };
+        ['<h4 style=\"color:#000000 !important; font-size: 12px;\"><% post_map[0].area rescue nil %></h4>', <%= post_map[0].latitude rescue nil %>, <%= post_map[0].longitude rescue nil %>],
+        <% end %>
+      <% end %>
+    ];
 
-//     var map = new google.maps.Map(document.getElementById('postermapView'), {
-//       zoom: 5,
-//       center: new google.maps.LatLng(21.1500, 79.0900),
+
+    // Create an array of styles.
+    var styles = [
+      {
+        stylers: [
+          { hue: "#00b4ff" },
+          { saturation: 20 }
+        ]
+      },{
+        featureType: "road",
+        elementType: "geometry",
+        stylers: [
+          { lightness: 100 },
+          { visibility: "simplified" }
+        ]
+      },{
+        featureType: "road",
+        elementType: "labels",
+        stylers: [
+          { visibility: "off" }
+        ]
+      }
+    ];
+
+    // Create a new StyledMapType object, passing it the array of styles,
+    // as well as the name to be displayed on the map type control.
+    var styledMap = new google.maps.StyledMapType(styles,
+      {name: "Styled Map"});
+    
+    // Setup the different icons and shadows
+    var iconURLPrefix = 'http://maps.google.com/mapfiles/ms/icons/';
+    
+    var icons = [
+      iconURLPrefix + 'red-dot.png'
+    ]
+    var icons_length = icons.length;
+    
+    
+    var shadow = {
+      anchor: new google.maps.Point(15,33),
+      url: iconURLPrefix + 'msmarker.shadow.png'
+    };
+
+    var map = new google.maps.Map(document.getElementById('postermapView'), {
+      zoom: 2,
+      center: new google.maps.LatLng(21.1500, 79.0900),
       
-//     mapTypeControl: false,
-    
-//     scaleControl: false,
-//     streetViewControl: false,
-//     streetViewControlOptions: {
-//         position: google.maps.ControlPosition.LEFT_TOP
-//     }
-
-//     });
-
-//     var infowindow = new google.maps.InfoWindow({
+      mapTypeControl: false,
       
-//     });
+      scaleControl: false,
+      streetViewControl: false,
+      streetViewControlOptions: {
+          position: google.maps.ControlPosition.LEFT_TOP
+      },
+      mapTypeControlOptions: {
+        mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
+      }
 
-//     var marker;
-//     var markers = new Array();
-    
-//     var iconCounter = 0;
-    
-//     // Add the markers and infowindows to the map
-//     for (var i = 0; i < locations.length; i++) {  
-//       marker = new google.maps.Marker({
-//         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-//         map: map,
-//         icon : icons[iconCounter],
-//         shadow: shadow
-//       });
+    });
 
-//       markers.push(marker);
-
-//       google.maps.event.addListener(marker, 'click', (function(marker, i) {
-//         return function() {
-//           infowindow.setContent(locations[i][0]);
-//           infowindow.open(map, marker);
-//         }
-//       })(marker, i));
+    var infowindow = new google.maps.InfoWindow({
       
-//       iconCounter++;
-//       // We only have a limited number of possible icon colors, so we may have to restart the counter
-//       if(iconCounter >= icons_length){
-//         iconCounter = 0;
-//       }
-//     }
+    });
 
-//     function AutoCenter() {
-//       //  Create a new viewpoint bound
-//       var bounds = new google.maps.LatLngBounds();
-//       //  Go through each...
-//       $.each(markers, function (index, marker) {
-//         bounds.extend(marker.position);
-//       });
-//       //  Fit these bounds to the map
-//       map.fitBounds(bounds);
-//     }
+    var marker;
+    var markers = new Array();
+    
+    var iconCounter = 0;
+    
+    // Add the markers and infowindows to the map
+    for (var i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map,
+        icon : icons[iconCounter],
+        shadow: shadow
+      });
+
+      markers.push(marker);
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+      
+      iconCounter++;
+      // We only have a limited number of possible icon colors, so we may have to restart the counter
+      if(iconCounter >= icons_length){
+        iconCounter = 0;
+      }
+    }
+
+     //Associate the styled map with the MapTypeId and set it to display.
+  map.mapTypes.set('map_style', styledMap);
+  map.setMapTypeId('map_style');
+
+    function AutoCenter() {
+      //  Create a new viewpoint bound
+      var bounds = new google.maps.LatLngBounds();
+      //  Go through each...
+      $.each(markers, function (index, marker) {
+        bounds.extend(marker.position);
+      });
+      //  Fit these bounds to the map
+      map.fitBounds(bounds);
+    }
 
   
 
-//     AutoCenter();
+    AutoCenter();
    </script>
+
+
+
+   
+ 
 
