--- a/app/views/home/search_post.pdf.erb
+++ b/app/views/home/search_post.pdf.erb
@@ -1,47 +1,22 @@
-   <%#= @posts.where(:created_at => Date.today.beginning_of_month..Date.today.end_of_month).count%>
 
-
-  <script type="text/javascript">
-
-    jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-
-    });
-    jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-    });
-
-
-  </script>
-<h4>Search by</h4>
-  <%= form_tag search_post_path,:method=> :get do %>
-  <%= hidden_field_tag :q, params[:q] %>
-From Date :
-<%= text_field_tag :start_date, params[:start_date] %>
-
-To Date :
-<%= text_field_tag :end_date, params[:end_date]%>&nbsp;
-
-  <%= submit_tag "Search", :class => "btn btn-primary contact-form"  %> 
-  <%end%>
-
-<h4>Listing All Post</h4>
-<table cellpadding="1"  class="table table-striped ">
+<table cellpadding="10" cellspacing="0" border="1" class="table table-striped table-bordered">
+<thead>
     <tr>
       <th>Sr No.</th>
       <th>Post ID</th>
-      <th>Poster Name</th>
-      <th>Date</th>
+       <th>Poster Name</th>
+       <th>Date</th>
       <th>Status</th>
-      <th></th>
       <th>Drop Off Date</th>
       <th>Pick up Date</th>
       <th>Drop off Price</th>
       <th>Pick up price</th>
-      <!-- <th>Booking Status</th> -->
       <th>Archived</th>
       <th>Ratings</th>
     </tr>
+  </thead>
+
+  <tbody id="all_posts" >
 
     <% @posts.each_with_index do |post, index| %>
     
@@ -57,11 +32,7 @@ To Date :
         <td><%= User.find(post.user_id).name rescue nil%>&nbsp;<%= User.find(post.user_id).last_name rescue nil%></td>
         <td><%= post.created_at.strftime("%d-%m-%Y") %></td> 
         <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
-         <% if post.status == true %>
-        <td> <%= link_to 'Deactive', toggled_feature_post_path(post.id)%></td>
-         <% else %>
-         <td><%= link_to 'Activate', toggled_feature_post_path(post.id)%></td>
-         <% end %>
+        
         
         <td><%= post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %></td>
         <td><%= post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %></td>
@@ -75,7 +46,6 @@ To Date :
          <%else%>
         <td><%= post.price_include_pick_up %></td>
           <%end%>
-        <!-- <td></td> -->
         <td><% if post.archive == true %> Yes <% else %> No <% end %></td>
         <%if post.overall_rating.to_s ==  "NaN"%>
         <td>No Ratings</td>
@@ -85,9 +55,8 @@ To Date :
 
       </tr>
     <% end %>
+
+    
+
+  </tbody>
 </table> 
-
-<%= will_paginate @posts %>
-
-
-
