--- a/app/views/home/index.xls.erb
+++ b/app/views/home/index.xls.erb
@@ -7,6 +7,7 @@
 <th>A/C Creation Date</th>
 <th>Last Login Date</th>
 <th>Last Login IP</th>
+<th>User Status</th>
 </tr>
 <% @adminusers.each do |adminuser|%>
 <tr>
@@ -16,7 +17,7 @@
 <td><%= adminuser.created_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_ip%></td>
-
+<td><% if adminuser.status == true %> Active <% else %> Deactive <% end %></td>
 </tr>
 <%end%> 
 </table>
