--- a/app/views/home/searching.pdf.erb
+++ b/app/views/home/searching.pdf.erb
@@ -8,6 +8,7 @@
 <th>A/C Creation Date</th>
 <th>Last Login Date</th>
 <th>Last Login IP</th>
+<th>User Status</th>
 </tr>
 <% @adminusers.each do |adminuser|%>
 <tr>
@@ -17,6 +18,8 @@
 <td><%= adminuser.created_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_at.to_date rescue nil%></td>
 <td><%= adminuser.last_sign_in_ip%></td>
+<td><% if adminuser.status == true %> Active <% else %> Deactive <% end %></td>
+
 </tr>
 <%end%> 
 </table>
