--- a/app/views/home/search_post.pdf.erb
+++ b/app/views/home/search_post.pdf.erb
@@ -4,11 +4,18 @@
     <tr>
       <th>Sr No.</th>
       <th>Post ID</th>
-       <th>Poster Name</th>
+       <th>Poster First Name</th>
+      <th>Poster Last Name</th>
+      <th>Post Description</th>
+      <th>Total Area (Sq ft)</th>
+      <th>Booked Area</th>
+      <th>No of Bookings</th>
        <th>Date</th>
       <th>Status</th>
-      <th>Drop Off Date</th>
-      <th>Pick up Date</th>
+      <th>Drop Off Start Date</th>
+      <th>Drop Off End Date</th>
+      <th>Pick up Start Date</th>
+      <th>Pick up End Date</th>
       <th>Drop off Price</th>
       <th>Pick up price</th>
       <th>Archived</th>
@@ -29,13 +36,21 @@
         <% end %>
         <td><%= index + x+1 %></td>
         <td><%= post.id %></td>
-        <td><%= User.find(post.user_id).name rescue nil%>&nbsp;<%= User.find(post.user_id).last_name rescue nil%></td>
+        <td><%= User.find(post.user_id).name rescue nil%></td>
+        <td><%= User.find(post.user_id).last_name rescue nil%></td>
+        <td><%= post.additional_comments%></td>
+        <td><%= post.area %></td>
+        <td></td>
+  
+        <td><%= Booking.where(:user_id=>post.user_id).count rescue nil%></td>
         <td><%= post.created_at.strftime("%d-%m-%Y") %></td> 
         <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
         
         
-        <td><%= post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %></td>
-        <td><%= post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %></td>
+         <td><%= post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %></td>
+        <td><%= post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %></td>
+        <td><%= post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %></td>
+        <td><%= post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %></td>
         <%if post.price_include_drop_off.blank?%>
         <td>-</td>
          <%else%>
