changes in messages module & working payement transfer & payment refund module

--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -105,6 +105,7 @@
   <div class="field">
     <%= f.label :full_name %>
     <%= f.text_field :full_name %>
+    <%= f.hidden_field :user_id,:value =>current_user.id %>
   </div>
  
   <div class="field">
