--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -30,6 +30,7 @@ To Date :
 <th>Pick up Date</th>
 <th>Drop off Date</th>
 <th>Order</th>
+<th>Cancel Booking</th>
 </tr>
 <% @bookings.each_with_index do |booking, index|%>
 <tr>
@@ -51,7 +52,7 @@ To Date :
  <td><%= Post.find(booking.post_id).drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= Post.find(booking.post_id).drop_off_avaibility_end_date.strftime("%d-%m-%Y")%></td>
 	
 <td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
-
+<td><%= link_to "Cancel Booking",cancel_booking_bookings_path(:drop_off_date =>booking.dropoff_date,:id =>booking.id) %></td>
 <td><%#= link_to "Delete", [:delete, adminuser], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <td><%#= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
 </tr>
