--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -15,7 +15,7 @@
    <div class="main">        
            
             <div id="login1">
-               <p style="margin:25px 0 0px 935px;"><a href="#">Login</a></p>
+               <p style="margin:25px 0 0px 935px;"><a href="#">Login hi</a></p>
                 </div>
                 
             <div id="menu">
