--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,6 +1,6 @@
  <title>ESpaceApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag "application", "https://js.stripe.com/v2/" %>
+  <%= stylesheet_link_tag    'application','style.css','components','new'%>
+  <%= javascript_include_tag "application", %>
   
   <%= csrf_meta_tags %>
   
